<resources>
    <string name="app_name">OkoloKursach</string>
    <string name="example">example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">save</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_phone_number">Enter phone number</string>
</resources>